crates/cypher-syntax/tests/snapshots/syntax_snapshots__expr_paren_still_parens_arithmetic.snap
---
source: crates/cypher-syntax/tests/syntax_snapshots.rs
assertion_line: 599
expression: "format_with_errors(\"RETURN (1 + 2)\")"
---
SOURCE_FILE@0..14
  STATEMENT@0..14
    RETURN_CLAUSE@0..14
      RETURN_KW@0..6 "RETURN"
      RETURN_BODY@6..14
        RETURN_ITEMS@6..14
          RETURN_ITEM@6..14
            PAREN_EXPR@6..14
              WHITESPACE@6..7 " "
              L_PAREN@7..8 "("
              BINARY_EXPR@8..13
                LITERAL_EXPR@8..9
                  INT_LITERAL@8..9 "1"
                WHITESPACE@9..10 " "
                PLUS@10..11 "+"
                LITERAL_EXPR@11..13
                  WHITESPACE@11..12 " "
                  INT_LITERAL@12..13 "2"
              R_PAREN@13..14 ")"
