crates/cypher-syntax/tests/snapshots/syntax_snapshots__expr_regex_match.snap
---
source: crates/cypher-syntax/tests/syntax_snapshots.rs
assertion_line: 329
expression: "format_with_errors(\"RETURN a =~ 'r.*'\")"
---
SOURCE_FILE@0..17
  STATEMENT@0..17
    RETURN_CLAUSE@0..17
      RETURN_KW@0..6 "RETURN"
      RETURN_BODY@6..17
        RETURN_ITEMS@6..17
          RETURN_ITEM@6..17
            REGEX_MATCH_EXPR@6..17
              VAR_EXPR@6..8
                WHITESPACE@6..7 " "
                IDENT@7..8 "a"
              WHITESPACE@8..9 " "
              REGEX_EQ@9..11 "=~"
              LITERAL_EXPR@11..17
                WHITESPACE@11..12 " "
                STRING_LITERAL@12..17 "'r.*'"
