crates/cypher-syntax/tests/snapshots/syntax_snapshots__expr_slice_bounded.snap
---
source: crates/cypher-syntax/tests/syntax_snapshots.rs
expression: "format_with_errors(\"RETURN xs[0..3]\")"
---
SOURCE_FILE@0..15
  STATEMENT@0..15
    RETURN_CLAUSE@0..15
      RETURN_KW@0..6 "RETURN"
      RETURN_BODY@6..15
        RETURN_ITEMS@6..15
          RETURN_ITEM@6..15
            SLICE_EXPR@6..15
              VAR_EXPR@6..9
                WHITESPACE@6..7 " "
                IDENT@7..9 "xs"
              L_BRACK@9..10 "["
              LITERAL_EXPR@10..11
                INT_LITERAL@10..11 "0"
              DOT_DOT@11..13 ".."
              LITERAL_EXPR@13..14
                INT_LITERAL@13..14 "3"
              R_BRACK@14..15 "]"
