crates/cypher-syntax/tests/snapshots/syntax_snapshots__expr_slice_elided_start.snap
---
source: crates/cypher-syntax/tests/syntax_snapshots.rs
expression: "format_with_errors(\"RETURN xs[..3]\")"
---
SOURCE_FILE@0..14
  STATEMENT@0..14
    RETURN_CLAUSE@0..14
      RETURN_KW@0..6 "RETURN"
      RETURN_BODY@6..14
        RETURN_ITEMS@6..14
          RETURN_ITEM@6..14
            SLICE_EXPR@6..14
              VAR_EXPR@6..9
                WHITESPACE@6..7 " "
                IDENT@7..9 "xs"
              L_BRACK@9..10 "["
              DOT_DOT@10..12 ".."
              LITERAL_EXPR@12..13
                INT_LITERAL@12..13 "3"
              R_BRACK@13..14 "]"
